--- a/css/style.css
+++ b/css/style.css
@@ -202,8 +202,8 @@ h1, h2, h3, h4, h5, h6, figure {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 200px;
-  width: 200px;
+  height: 100px;
+  width: 100px;
   margin: 0 auto;
   margin-bottom: 30px;
   -webkit-border-radius: 50%;
@@ -414,7 +414,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 40px;
   margin-bottom: 20px;
   line-height: 1.5;
-  color: #000;
+  color: #fff;
 }
 .fh5co-heading p {
   font-size: 18px;
@@ -554,6 +554,8 @@ h1, h2, h3, h4, h5, h6, figure {
   vertical-align: middle;
   height: 44px;
   font-size: 18px;
+  border: 1px solid #fff;
+  border-radius: 20%;
 }
 .timeline > li.timeline-unverted {
   text-align: right;
@@ -1028,7 +1030,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 input[type="text"] {
-  height: 50px;
+  height: 35px;
 }
 
 .form-group {
